Static parts of the site

--- a/about_us.html
+++ b/about_us.html
@@ -1,4 +1,12 @@
 <h1>About Us</h1>
-  <p>We are an environmental nonprofit that is dedicated to making it simple for anyone to help the environment. Our simplified donation process and global reach has helped us build a movement of supporters who believe in the power of trees.</p>
+<p>We are an environmental nonprofit that is dedicated to making it simple for 
+  anyone to help the environment. Our simplified donation process and global reach 
+  has helped us build a movement of supporters who believe in the power of trees
+  and nature.</p>
 
- 
+<h2>Our team</h2>
+ <p class="name">Juan Ribeiro</p>
+ <p>CEO and main trainer.</p>
+
+ <p class="name">Pedro Kheel</p>
+ <p>Vice President and secondary trainer.</p>
