--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
 <link rel="stylesheet" href="./style.css">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
 
@@ -15,9 +16,9 @@
   <h1>Nature Travel Recommendations</h1>
   <nav>
   <ul>
-  <li><a href="./index.html" id="home">Home </a></li>
-  <li><a href="./about_us.html" id="about_us">About Us </a></li>
-  <li><a href="./contact_us.html" id="contact_us">Contact Us </a></li>
+  <li><a href="javascript:loadPartial('home.html')" id="home">Home </a></li>
+  <li><a href="javascript:loadPartial('about_us.html')" id="about_us">About Us </a></li>
+  <li><a href="javascript:loadPartial('contact_us.html')" id="contact_us">Contact Us </a></li>
   <li><input type="text" id="destinationInput" placeholder="Enter a destination keyword"> </li>
   <li><button id='btnSearch'>Search</button></li>
   <li><button id='btnClear'>Clear</button></li>
@@ -46,13 +47,15 @@
         </ul>
   </aside>
   
-  <main>
+  <main id="main">
     <h1>Explore nature destinations</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+<p>Nature-based tourism represents around 20% of the global tourism market, and it is the fastest-growing sector within the industry. It got even more popular during the pandemic when people’s choices for leisure were limited.</p>
+<p>Firstly, people are becoming more conscious about the physical, mental, and social benefits of outdoor activities, relaxing environments, and being away from the buzzing cities.</p>
+<p>Secondly, people nowadays pay attention to responsible travel as the evident impacts of global warming are mounting in all corners of the world.</p>
   </main>
 </section>
 
+<script src="./script.js"></script>
 </body>
 </html>
 
