--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
   </aside>
   
   <main id="main">
+    <div>
     <h1>Explore nature destinations</h1>
 <p>Nature-based tourism represents around 20% of the global tourism market, and it is the fastest-growing sector within the industry. It got even more popular during the pandemic when people’s choices for leisure were limited.</p>
 <p>Firstly, people are becoming more conscious about the physical, mental, and social benefits of outdoor activities, relaxing environments, and being away from the buzzing cities.</p>
 <p>Secondly, people nowadays pay attention to responsible travel as the evident impacts of global warming are mounting in all corners of the world.</p>
+</div>
+<div id="result"></div>
   </main>
 </section>
 
