--- a/about_us.html
+++ b/about_us.html
@@ -1,8 +1,7 @@
 <h1>About Us</h1>
 <p>We are an environmental nonprofit that is dedicated to making it simple for 
-  anyone to help the environment. Our simplified donation process and global reach 
-  has helped us build a movement of supporters who believe in the power of trees
-  and nature.</p>
+  anyone to travel without damaging the environment. Our mission is to help 
+  people to enjoy the amazing Nature.</p>
 
 <h2>Our team</h2>
  <p class="name">Juan Ribeiro</p>
