--- a/contact_us.html
+++ b/contact_us.html
@@ -11,12 +11,8 @@
       <input type="email" id="email" name="email" required>
     </div>
     <div>
-      <label for="condition">Condition</label>
-      <input type="text" id="condition" name="condition" required>
-    </div>
-    <div>
       <label for="message">Message</label>
       <textarea id="message" name="message" rows="3" required></textarea>
     </div>
-    <button type="submit" onclick="thankyou()">Submit</button>
+    <button type="submit" onclick="alert('Thank you for contacting us!')">Submit</button>
   </form>
